feat: response helper
